--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <header>
+  	<nav>
+  		<a href="<%= root_path %>">The Experiments</a>
+  		<a href="<%= methods_index_path %>">Methods</a>
+  		<a href="<%= questions_index_path %>">Dear Dr. Drip</a>
+  		<a href="<%= ideas_index_path %>">Ideas</a>
+  	</nav>
+  </header>
+
 
 <%= yield %>
 
