--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,20 @@
             <a href="<%= root_path %>">The Experiments</a>
           </td>
           <td class="<%= "current" if request.path == methods_index_path %>">
-            <a href="<%= methods_index_path %>">Methods</a>
+            
+              <li>
+                <a href="<%= methods_index_path %>">Methods</a>
+                <code><ul id="navi">
+                <ul>
+                  <li> <a href="<%=methods_frenchpress_path %>">French Presss</a></li>
+                  <li> <a href="<%=methods_clever_path %>">Cleverr</a></li>
+                  <li> <a href="<%=methods_pourover_path %>">Pour Overr</a></li>
+                  <li> <a href="<%=methods_mokapot_path %>">Moka Pott</a></li>
+                </ul>
+                </ul></code>
+              </li>
+            
+            
           </td>
           <td class="<%= "current" if request.path == questions_index_path %>">
             <a href="<%= questions_index_path %>">Dear Dr. Bean</a>
@@ -29,6 +42,7 @@
         </tr>
       </table>
   	</nav>
+
   </header>
   <article>
     <div> <%= yield %> </div>
