fixed drop down, added text on brew methods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,12 +21,13 @@
             
               <li>
                 <a href="<%= methods_index_path %>">Methods</a>
-                <code><ul id="navi">
+                <code><ul id="menu">
                 <ul>
-                  <li> <a href="<%=methods_frenchpress_path %>">French Presss</a></li>
-                  <li> <a href="<%=methods_clever_path %>">Cleverr</a></li>
-                  <li> <a href="<%=methods_pourover_path %>">Pour Overr</a></li>
-                  <li> <a href="<%=methods_mokapot_path %>">Moka Pott</a></li>
+                  <li> <a href="<%=methods_frenchpress_path %>">French Press</a></li>
+                  <li> <a href="<%=methods_clever_path %>">Clever</a></li>
+                  <li> <a href="<%=methods_pourover_path %>">Pour Over</a></li>
+                   <li> <a href="<%=methods_aeropress_path %>">Aeropress</a></li>
+                  <li> <a href="<%=methods_mokapot_path %>">Moka Pot</a></li>
                 </ul>
                 </ul></code>
               </li>
