--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,6 +29,13 @@ h6 {
 
 }
 
+p {
+  margin: 13px;
+  padding-left: 21px;
+  padding-right: 21px;
+  text-align: justify;
+}
+
 h1 {
 	font-size: 20px;
     letter-spacing: 1.7px;
@@ -132,107 +139,42 @@ footer {
 }
 
 
-
-#navi{
-    list-style:none;
-    font-weight:lighter;
-    margin-bottom:10px;
-    <span class="code-comment">/* Clear floats */</span>
-    float:left;
-    width:100%;
-    <span class="code-comment">/* Bring the nav above everything else--uncomment if needed.
-    position:relative;
-    z-index:5;
-    */</span>
-}
- 
-#navi li{
-    float:left;
-    margin-right:10px;
-    position:relative;
-}
-#navi a{
-    display:block;
-    padding:5px;
-    background-image: url(/assets/coffee_experiments_paper.jpg);
-    text-decoration:none;
-}
-#navi a:hover{
-	color:#fff;
-    background:#4b4642;
-    font-weight: bold;
+ul li {
+  display: block;
+  position: relative;
+  float: left;
 }
 
-<span class="code-comment">/*--- DROPDOWN ---*/</span>
+li ul {
+  display: none;
+}
 
-#navi ul{
-    background:#fff; <span class="code-comment">/* Adding a background makes the dropdown work properly in IE7+. Make this as close to your page's background as possible (i.e. white page == white background). */</span>
-    background:rgba(255,255,255,0); <span class="code-comment">/* But! Let's make the background fully transparent where we can, we don't actually want to see it if we can help it... */</span>
-    list-style:none;
-    position:absolute;
-    left:-9999px; <span class="code-comment">/* Hide off-screen when not needed (this is more accessible than display:none;) */</span>
+ul li a {
+  display: block;
+  text-decoration: none;
+  color: #ffffff;
+  border-top: 1px solid #ffffff;
+  padding: 5px 10px 5px 10px;
+  background: #4b4642;
+  white-space: nowrap;
 }
-/*
-#navi ul li{
-    padding-top:1px; <span class="code-comment">/* Introducing a padding between the li and the a give the illusion spaced items */</span>
-    float:none;
-}
-/*
-#navi ul a{
-    white-space:nowrap; <span class="code-comment">/* Stop text wrapping and creating multi-line dropdown items */</span>
-}
-/*
-#navi li:hover ul{ <span class="code-comment">/* Display the dropdown on hover */</span>
-/*
-    left:0; <span class="code-comment">/* Bring back on-screen when needed */</span>
-}
-/*
-#navi li:hover a{ <span class="code-comment">/* These create persistent hover states, meaning the top-most link stays 'hovered' even when your cursor has moved down the list. */</span>
-/*
-    background:#6b0c36;
-    text-decoration:underline;
-}
-/*
-#navi li:hover ul a{ <span class="code-comment">/* The persistent hover state does however create a global style for links even before they're hovered. Here we undo these effects. */</span>
- /*
-   text-decoration:none;
-}
-#/*
-navi li:hover ul li a:hover{ <span class="code-comment">/* Here we define the most explicit hover states--what happens when you hover each individual link. */</span>
- /*
-   background:#333;
-}</code>
 
-/*
-<code>#nav ul{
-    background:#fff; <span class="code-comment">/* Adding a background makes the dropdown work properly in IE7+. Make this as close to your page's background as possible (i.e. white page == white background). */</span>
-/*
-    background:rgba(255,255,255,0); <span class="code-comment">/* But! Let's make the background fully transparent where we can, we don't actually want to see it if we can help it... */</span>
-/*
-    list-style:none;
-    position:absolute;
-    left:-9999px; <span class="code-comment">/* Hide off-screen when not needed (this is more accessible than display:none;) */</span>
-/*
-}</code>
-
-<code>#nav ul li{
-    padding-top:1px; <span class="code-comment">/* Introducing a padding between the li and the a give the illusion spaced items */</span>
-/*
-    float:none;
+ul li a:hover {
+  color: white;
+  background:#4b4642;
 }
-/*
-#nav ul a{
-    white-space:nowrap; <span class="code-comment">/* Stop text wrapping and creating multi-line dropdown items */</span>
-}
-/*
-#nav li:hover ul{ <span class="code-comment">/* Display the dropdown on hover */</span>
-/*
-    left:0; <span class="code-comment">/* Bring back on-screen when needed */</span>
-/*
-}</code>
 
-<code>#nav li:hover a{ <span class="code-comment">/* These create persistent hover states, meaning the top-most link stays 'hovered' even when your cursor has moved down the list. */</span>
-/*
-    background:#6b0c36;
-    text-decoration:underline;
-}</code>
+li:hover ul {
+  display: block;
+  position: absolute;
+}
+
+li:hover li {
+  float: none;
+  font-size: 11px;
+}
+
+li:hover li a:hover {
+  background: #867d74;
+
+}
