French Press Page added content

--- a/app/views/methods/frenchpress.html.erb
+++ b/app/views/methods/frenchpress.html.erb
@@ -1,3 +1,56 @@
-FrenchPress
+<h2>Brew Method: French Press</h2>
 
-instructions are now coming...
+<p>
+	The French Press (or Press Pot, Cafetière) is a full immersion, non-filtered brew method. Some key identifiers for this method are: full bodied, heavier mouth-feel, and an oilier finish.  
+</p>
+
+<h3>Table 1: Comparison of Brew Method Variables for French Press</h>
+	<div>
+      <table>
+        <tr> 
+	      <td>Source</td>
+	      <td>Bean:H2O</td>
+	      <td>Time</td>
+	      <td>Grind</td>
+	      <td>Temp</td>
+	      <td>Bean</td>
+        </tr>
+
+        <tr> 
+          <td>Blue Bottle Coffee</td>
+          <td>1:10</td>
+      	  <td>30s Bloom, 4min</td>
+      	  <td>Coarse</td>
+      	  <td>Boil</td>
+      	  <td>fruity, heavy, creamy</td>
+        </tr>
+
+        <tr> 
+          <td>Stumptown</td>
+          <td>1:16</td>
+      	  <td>4min</td>
+      	  <td>Coarse</td>
+      	  <td>Just to a boil</td>
+      	  <td>n/a</td>
+        </tr>
+
+        <tr> 
+          <td>Ritual Coffee</td>
+          <td>1:16</td>
+      	  <td>4min</td>
+      	  <td>Medium</td>
+      	  <td>96°C</td>
+      	  <td>TBD</td>
+        </tr>
+
+        <tr> 
+          <td>Source</td>
+          <td>Bean:H20</td>
+      	  <td>Time</td>
+      	  <td>Grind</td>
+      	  <td>Temp</td>
+      	  <td>Bean</td>
+        </tr>
+
+      </table>
+     </div>
