--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,19 +30,37 @@ h6 {
 }
 
 p {
-  margin: 13px;
-  padding-left: 21px;
-  padding-right: 21px;
+  margin: 6px;
+  padding-left: 33px;
+  padding-right: 33px;
   text-align: justify;
+  line-height: 2.1;
+  font-family: Helvetica Neue;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 h1 {
 	font-size: 20px;
-    letter-spacing: 1.7px;
-    font-weight: normal;
-    //text-align: left;
-    //padding-left: 25px
+  letter-spacing: 1.7px;
+  font-weight: normal;
 
+}
+
+h2 {
+  font-size: 20px;
+  letter-spacing: 1.7px;
+  font-weight: normal;
+  text-align: left;
+  padding-left: 20px;
+  padding-bottom: 28px;
+}
+
+h3 {
+  font-size: 16px;
+  letter-spacing: 1.7px;
+  font-weight: normal;
+  padding-top: 28px;
 }
 
 header {
@@ -62,8 +80,6 @@ nav {
 	letter-spacing: 1.5px;
 
 }
-
-
 
 a {
 	display: block;
@@ -176,5 +192,25 @@ li:hover li {
 
 li:hover li a:hover {
   background: #867d74;
+}
+
+
+div table{
+
+  font-family: "Helvetica Neue";
+  font-size: 14px;
+  font-weight: 400;
+  text-align: left;
+}
+
+div table td {
+  width:auto;
+  height: 28px;
+  
+}
+
+div2 {
+  font-family: "American Typewriter";
+
 
 }
