--- a/app/views/methods/frenchpress.html.erb
+++ b/app/views/methods/frenchpress.html.erb
@@ -4,7 +4,7 @@
 	The French Press (or Press Pot, Cafetière) is a full immersion, non-filtered brew method. Some key identifiers for this method are: full bodied, heavier mouth-feel, and an oilier finish.  
 </p>
 
-<h3>Table 1: Comparison of Brew Method Variables for French Press</h>
+<h3>Table 1: Comparison of Brew Method Variables for French Press</h3>
 	<div>
       <table>
         <tr> 
@@ -17,7 +17,7 @@
         </tr>
 
         <tr> 
-          <td>Blue Bottle Coffee</td>
+          <td>Blue Bottle</td>
           <td>1:10</td>
       	  <td>30s Bloom, 4min</td>
       	  <td>Coarse</td>
@@ -44,13 +44,24 @@
         </tr>
 
         <tr> 
-          <td>Source</td>
-          <td>Bean:H20</td>
-      	  <td>Time</td>
-      	  <td>Grind</td>
-      	  <td>Temp</td>
-      	  <td>Bean</td>
+          <td>Sight Glass</td>
+          <td>1:14</td>
+      	  <td>30sec, Stir, 3:30min</td>
+      	  <td>Coarser</td>
+      	  <td>Boil, let cool a few min</td>
+      	  <td>TBD</td>
+        </tr>
+
+        <tr> 
+          <td>Verve</td>
+          <td>1:11</td>
+      	  <td>30sec, Stir, 3min</td>
+      	  <td>Coarse</td>
+      	  <td>90°-96°C</td>
+      	  <td>TBD</td>
         </tr>
 
       </table>
-     </div>
+    </div>
+    
+
