--- a/app/views/methods/clever.html.erb
+++ b/app/views/methods/clever.html.erb
@@ -1,1 +1,7 @@
-Clever, you think you are so clever...
+<h2>Brew Method: French Press</h2>
+
+<p>
+	Clever, you think you are so clever...  
+</p>
+
+<h3>Table 1: Comparison of Brew Method Variables for the Clever</h3>
