--- a/app/views/methods/mokapot.html.erb
+++ b/app/views/methods/mokapot.html.erb
@@ -1,2 +1,7 @@
-Moka Pot
-no, not mocha
+<h2>Brew Method: Moka Pot</h2>
+
+<p>
+	MOKA POT: The French Press (or Press Pot, Cafetière) is a full immersion, non-filtered brew method. Some key identifiers for this method are: full bodied, heavier mouth-feel, and an oilier finish.  
+</p>
+
+<h3>Table 1: Comparison of Brew Method Variables for French Press</h3>
