--- a/app/views/methods/pourover.html.erb
+++ b/app/views/methods/pourover.html.erb
@@ -1,1 +1,7 @@
-Pour Over instructions!
+<h2>Brew Method: Pour Over</h2>
+
+<p>
+	POUR OVER!!! The French Press (or Press Pot, Cafetière) is a full immersion, non-filtered brew method. Some key identifiers for this method are: full bodied, heavier mouth-feel, and an oilier finish.  
+</p>
+
+<h3>Table 1: Comparison of Brew Method Variables for Classic Pour Over</h3>
