--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       The Coffee Experiments
     </h6>
   	<nav>
-      <table>
+      <table class=nav>
         <tr>
           <td class="<%= "current" if request.path == root_path %>">
             <a href="<%= root_path %>">The Experiments</a>
