--- a/app/views/methods/index.html.erb
+++ b/app/views/methods/index.html.erb
@@ -1,20 +1,20 @@
 <h1>Brew Methods</h1>
 <p>
 	     	There are many different ways of making coffee, each with its own unique ritual and taste benefits.
-
+</p>
+<p>
 Perhaps the simplest to understand is the Cafetière (French Press, or Coffee
-Plunger). You add some coarsely ground coffee beans and some water, let them
-brew for a few minutes, and then use the metal plunger to seal the grounds in
-the pot while you pour. The result is a rich, full-bodied cup of coffee, with
-perhaps a little thickness or grittiness at the bottom if your ground is too
+Plunger). You add some coarsely ground coffee beans and some water, let them brew for a few minutes, and then use the metal plunger to seal the grounds in the pot while you pour. The result is a rich, full-bodied cup of coffee, with perhaps a little thickness or grittiness at the bottom if your ground is too
 find to be held back by the filter.
-
+</p>
+<p>
 If the grittiness isn't to your taste, you can use a method with a paper filter
 instead. These tend to require a little more manual work than the Cafetière but
 the result is often a more detailed and refined taste even if it lacks some of
 the richness. The pour-over that we use is a Chemex, though the technique is
 similar for all of them.
-
+</p>
+<p>
 To get back some of the fullness of taste of a Cafetière while still retaining
 some of the delicate flavours exposed by a pour-over you can use the Clever.
 The gadget, which highly deserves its name, allows the coffee to brew while
