--- a/app/views/methods/frenchpress.html.erb
+++ b/app/views/methods/frenchpress.html.erb
@@ -1,19 +1,23 @@
 <h2>Brew Method: French Press</h2>
-
-<p>
-	The French Press (or Press Pot, Cafetière) is a full immersion, non-filtered brew method. Some key identifiers for this method are: full bodied, heavier mouth-feel, and an oilier finish.  
-</p>
+<div>
+    <div style="float: left; margin-top: 15px">
+        <%= image_tag "coffee-experiments-press.png",:width => "30%", :height => "30%"%>
+    </div>
+  <p>
+  	The French Press (or Press Pot, Cafetière) is a full immersion, non-filtered brew method. Some key identifiers for this method are: full bodied, heavier mouth-feel, and an oilier finish.  
+  </p>
+</div>
 
 <h3>Table 1: Comparison of Brew Method Variables for French Press</h3>
 	<div>
       <table>
         <tr> 
-	      <td>Source</td>
-	      <td>Bean:H2O</td>
-	      <td>Time</td>
-	      <td>Grind</td>
-	      <td>Temp</td>
-	      <td>Bean</td>
+	      <th>Source</th>
+	      <th>Bean:H2O</th>
+	      <th>Time</th>
+	      <th>Grind</th>
+	      <th>Temp</th>
+	      <th>Bean</th>
         </tr>
 
         <tr> 
