--- a/app/views/methods/index.html.erb
+++ b/app/views/methods/index.html.erb
@@ -1,25 +1,51 @@
 <h1>Brew Methods</h1>
-<p>
-	     	There are many different ways of making coffee, each with its own unique ritual and taste benefits.
-</p>
-<p>
-Perhaps the simplest to understand is the Cafetière (French Press, or Coffee
-Plunger). You add some coarsely ground coffee beans and some water, let them brew for a few minutes, and then use the metal plunger to seal the grounds in the pot while you pour. The result is a rich, full-bodied cup of coffee, with perhaps a little thickness or grittiness at the bottom if your ground is too
-find to be held back by the filter.
-</p>
-<p>
-If the grittiness isn't to your taste, you can use a method with a paper filter
-instead. These tend to require a little more manual work than the Cafetière but
-the result is often a more detailed and refined taste even if it lacks some of
-the richness. The pour-over that we use is a Chemex, though the technique is
-similar for all of them.
-</p>
-<p>
-To get back some of the fullness of taste of a Cafetière while still retaining
-some of the delicate flavours exposed by a pour-over you can use the Clever.
-The gadget, which highly deserves its name, allows the coffee to brew while
-fully immersed and then passes the result through a paper filter. The result is
+<p>Below are some descriptions about the various brew methods we investigate in the experiments and the typical ways they affect the taste of the.</p>
+<div>
+	<div>
+	    <div style="float: left; margin-top: 31px">
+	    	<%= image_tag "coffee-experiments-press.png",:width => "40%", :height => "40%"%>
+		</div>
 
+	    <p>Perhaps the simplest to understand is the Cafetière (French Press, or Press Pot). You add some coarsely ground coffee beans and some water, let them brew for a few minutes, and then use the metal plunger to seal the grounds in the pot while you pour. The result is a rich, full-bodied cup of coffee, with perhaps a little thickness or grittiness at the bottom if your ground is too fine.</p>
+	</div>
 
-</p>
+	<div>
+	    <div style="float: right; margin-top: 31px">
+	    	<%= image_tag "coffee-experiments-pourover.png",:width => "50%", :height => "50%"%>
+		</div>
 
+	    <p>If the grittiness isn't to your taste, you can use the clasic Pour Over method (Melitta or V60) with a paper filter instead. These tend to require a little more manual work than the Cafetière but the result is often a more detailed and refined taste where the oils and textures are removed, even if it lacks some of the richness.</p>
+	</div>
+
+	<div>
+	    <div style="float: left;  margin-top: 31px">
+	    	<%= image_tag "coffee-experiments-clever.png",:width => "50%", :height => "50%"%>
+		</div>
+
+	    <p>To get back some of the fullness of taste of a Cafetière while still retaining some of the delicate flavours exposed by a pour-over you can use the Clever. The gadget, highly deserving of its name, combines the full immersion method with the filtering through a paper filter resulting in a pleasant balance of a rich body without getting overwhelmed by the grind texture.</p>
+	</div>
+
+	<div>
+	    <div style="float: right; margin-top: 31px">
+	    	<%= image_tag "coffee-experiments-aeropress.png",:width => "50%", :height => "50%"%>
+		</div>
+
+	    <p>Turkish, cup body extra, aged dark, mazagran caffeine, siphon black crema fair trade skinny organic turkish robust cream ristretto cup strong coffee. So id viennese, whipped cinnamon, as brewed medium, sugar cultivar rich medium at macchiato java. Cup spoon qui irish, kopi-luwak, macchiato grounds. cortado breve coffee organic that black siphon et decaffeinated, acerbic viennese plunger pot mazagran at spoon. Cortado, beans single shot lungo caramelization, variety acerbic wings, beans, lungo rich, crema and froth shop est and redeye mocha crema.</p>
+	</div>
+
+	<div>
+	    <div style="float: left;">
+	    	<%= image_tag "coffee-experiments-beans-image.png",:width => "50%", :height => "50%"%>
+		</div>
+
+	    <p>Latte macchiato roast as sit organic, barista lungo plunger pot ristretto, coffee dark id and, doppio iced chicory mazagran, coffee crema pumpkin spice affogato crema grounds. Cup filter decaffeinated breve, frappuccino mug brewed.</p>
+	</div>
+
+	<div>
+	    <div style="float: right; margin-top: 15px">
+	    	<%= image_tag "coffee-experiments-grinder2.png",:width => "50%", :height => "50%"%>
+		</div>
+
+	    <p>Doppio plunger pot iced blue mountain organic to go a instant to go ut arabica et decaffeinated. Ut id white cultivar bar, as, americano, bar cappuccino milk con panna skinny affogato. Ristretto spoon blue mountain, in, variety, robust as single origin cream siphon caramelization americano sweet roast grinder. Flavour rich beans aftertaste.</p>
+	</div>
+</div>
