changed config.serve_static_assets = true in production.rb (from "false:)

--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -13,7 +13,7 @@
 		<%= image_tag "background-variables-coffee-experiments.png" %>
 		<div>
 			<h5>Bean Ratio</h5>
-			<div class>The more coffee you use and less water, the stronger the resulting cup. We define the amount of coffee to use as a ratio by weight, as different brewing methods make different amounts of coffee.</div class>
+			<p>The more coffee you use and less water, the stronger the resulting cup. We define the amount of coffee to use as a ratio by weight, as different brewing methods make different amounts of coffee.</p>
 		</div>
 		<div>
 			<h5>Time</h5>
